Update Java compile to target Java 21.
 - Updates Ant build to source/target Java 21
 - Updates Eclipse project to look for Java 21 (JVM and source compat)
 - Fixes warnings due to use of deprecated methods in Java 21