@@ -39,8 +39,8 @@ public class RtiFactoryFactory
 	{
 		try
 		{
-			Class cls = Class.forName( factoryClassName );
-			return (RtiFactory)cls.newInstance();
+			Class<?> cls = Class.forName( factoryClassName );
+			return (RtiFactory)cls.getDeclaredConstructor().newInstance();
 		}
 		catch( ClassNotFoundException e )
 		{
@@ -53,6 +53,10 @@ public class RtiFactoryFactory
 		catch( IllegalAccessException e )
 		{
 			throw new RTIinternalError( "Cannot access class " + factoryClassName );
+		}
+		catch( Exception e )
+		{
+			throw new RTIinternalError( e );
 		}
 	}
 
